--- a/docs/assets/img/favicons/manifest.json
+++ b/docs/assets/img/favicons/manifest.json
@@ -1,8 +1,8 @@
 
 
 {
-  "name": "ndquy blog",
-  "short_name": "ndquy blog",
+  "name": "Quy's blog",
+  "short_name": "Quy's blog",
   "description": "Chia sẻ kiến thức công nghệ lập trình và ứng dụng machine learning cơ bản và nâng cao.",
   "icons": [
     {
