--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ theme: jekyll-theme-chirpy
 # change below value to '/projectname'.
 baseurl: ''
 # the HTML language tag › https://www.w3.org/International/questions/qa-choosing-language-tags
-lang: en-US
+lang: vi-VI
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
 timezone: Asia/Shanghai
@@ -21,7 +21,7 @@ tagline: Lập trình, Machine learning và Khoa học dữ liệu   # it will d
 description: >-                        # used by seo meta and the atom feed
   Chia sẻ kiến thức công nghệ
   lập trình và ứng dụng
-  machine learning cơ bản và nâng cao.
+  machine learning, khai phá dữ liệu, kỹ thuật lập trình.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://ndquy.github.io'
@@ -140,14 +140,14 @@ defaults:
 sass:
   style: compressed
 
-compress_html:
-  clippings: all
-  comments: all
-  endings: all
-  profile: false
-  blanklines: false
-  ignore:
-    envs: [development]
+#compress_html:
+#  clippings: all
+#  comments: all
+#  endings: all
+#  profile: false
+#  blanklines: false
+#  ignore:
+#    envs: [development]
 
 exclude:
   - vendor
