--- a/_config.yml
+++ b/_config.yml
@@ -140,14 +140,14 @@ defaults:
 sass:
   style: compressed
 
-#compress_html:
-#  clippings: all
-#  comments: all
-#  endings: all
-#  profile: false
-#  blanklines: false
-#  ignore:
-#    envs: [development]
+compress_html:
+  clippings: all
+  comments: all
+  endings: all
+  profile: false
+  blanklines: false
+  ignore:
+    envs: [development]
 
 exclude:
   - vendor
